[package]
name = "tvrank"
version = "0.7.1"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]
exclude = ["/attic", "/.github", "/.gitignore", "/screencasts", "/screenshots"]

[lib]
name = "tvrank"
path = "src/lib.rs"

[[bin]]
name = "tvrank"
path = "src/main.rs"

[dependencies]
env_logger = "0.8"
log = "0.4"
structopt = "0.3"
derive_more = "0.99"
# derive-new = "0.5"
enum-utils = "0.1"
serde = { version = "1.0", features = ["derive"] }
# serde_with = "1.9"
serde_json = "1.0"
serde_yaml = "0.8"
csv = "1.1"
regex = "1.5"
directories = "3.0"
# memmap = "0.7"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
atoi = "0.4"
fnv = "1.0"
# num_cpus = "1.13"
# crossbeam = "0.8"
parking_lot = "0.11"
humantime = "2.1"
prettytable-rs = "0.8"
# titlecase = "1.1"
indicatif = "0.16"
walkdir = "2.3"
tempfile = "3.2"
# deepsize = "0.2"
# bitvec = "0.22"
rayon = "1.5"
# tokio = { version = "1.14", features = ["rt-multi-thread", "macros"] }
aho-corasick = "0.7"
deunicode = "1.3"
indoc = "1.0"
truncatable = "0.1"

[profile.release]
debug = true

[profile.production]
inherits = "release"
debug = false
lto = true
codegen-units = 1
opt-level = 3
incremental = false
overflow-checks = false
panic = "abort"
