[package]
name = "tvrank"
version = "0.8.0"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]
exclude = ["/attic", "/.github", "/.gitignore", "/screencasts", "/screenshots"]

[workspace]
members = ["utils", "imdb", "cli"]
default-members = ["utils", "imdb", "cli"]

[dev-dependencies]
tvrank-utils = { path = "utils" }
tvrank-imdb = { path = "imdb" }
humantime = "2.1"
tempfile = "3.3"

[profile.release]
debug = false
lto = true

[profile.production]
inherits = "release"
codegen-units = 1
opt-level = 3
incremental = false
overflow-checks = false
panic = "abort"
