[package]
name = "tvrank"
version = "0.8.1"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]
exclude = ["/attic", "/.github", "/.gitignore", "/screencasts", "/screenshots"]

[workspace]
members = ["utils", "imdb", "cli", "examples/*"]
default-members = ["utils", "imdb", "cli"]

[profile.release]
debug = false
lto = true

[profile.production]
inherits = "release"
codegen-units = 1
opt-level = 3
incremental = false
overflow-checks = false
panic = "abort"
