[package]
name = "tvrank-cli"
version = "0.9.0"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "../README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]

[[bin]]
name = "tvrank"
path = "src/main.rs"

[dependencies]
tvrank = { path = "../lib", version = "0.9.0" }
indicatif = "0.16"
log = "0.4"
atoi = "2.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
derive_more = "0.99"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
walkdir = "2.3"
regex = "1.5"
humantime = "2.1"
directories = "5.0"
truncatable = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prettytable-rs = "0.10"
url = "2.2"
thiserror = "1.0"
