[package]
name = "tvrank-cpp"
version = "0.8.4"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "../README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
tvrank = { path = "../lib", version = "0.8.4" }

[build-dependencies]
cbindgen = "0.23"
