[package]
name = "tvrank-imdb"
version = "0.8.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tvrank-utils = { path = "../utils" }
aho-corasick = "0.7"
derive_more = "0.99"
deunicode = "1.3"
fnv = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
rayon = "1.5"
atoi = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
humantime = "2.1"
parking_lot = "0.12"
log = "0.4"
enum-utils = "0.1"

[dev-dependencies]
indoc = "1.0"
