[package]
name = "tvrank"
version = "0.9.0"
edition = "2021"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "../README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]

[lib]
path = "src/lib.rs"

[dependencies]
aho-corasick = "0.7"
derive_more = "0.99"
deunicode = "1.3"
fnv = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
rayon = "1.5"
atoi = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
humantime = "2.1"
parking_lot = "0.12"
log = "0.4"
enum-utils = "0.1"
url = "2.2"
thiserror = "1.0"

[dev-dependencies]
indoc = "1.0"
tempfile = "3.3"
