[package]
name = "tvrank"
version = "0.10.2"
edition = "2024"
description = "Query and sort information about movies and series"
authors = ["Fred Morcos <fm@fredmorcos.com>"]
license = "MIT"
homepage = "https://github.com/fredmorcos/tvrank"
repository = "https://github.com/fredmorcos/tvrank"
readme = "../README.md"
keywords = ["tv", "series", "movies", "imdb", "rank"]
categories = ["caching", "command-line-utilities", "filesystem", "multimedia::video", "parsing"]

[lib]
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1"
derive_more = { version = "2.0", features = ["display", "from", "into"] }
deunicode = "1.3"
fnv = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
rayon = "1.5"
atoi = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
humantime = "2.1"
parking_lot = "0.12"
log = "0.4"
url = "2.2"
thiserror = "2.0"

[dev-dependencies]
indoc = "2.0"
tempfile = "3.3"
